// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Portal variants: basic 1`] = `
<Portal
  containerInfo={
    <body>
      <div>
        Portal content here
      </div>
    </body>
  }
>
  <div>
    Portal content here
  </div>
</Portal>
`;

exports[`Storyshots Portal variants: custom portal node 1`] = `
<div>
  <Portal
    portalNode={
      <div>
        <div>
          Custom Portal content here
        </div>
      </div>
    }
  >
    <Portal
      containerInfo={
        <div>
          <div>
            Custom Portal content here
          </div>
        </div>
      }
    >
      <div>
        Custom Portal content here
      </div>
    </Portal>
  </Portal>
</div>
`;
